--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.5",
+    "@babel/preset-env": "^7.16.5",
     "autoprefixer": "^9.7.6",
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.7.0",
@@ -35,6 +38,13 @@
     "start": "npm-run-all --parallel css-watch js-watch"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.2"
-  }
+    "@fortawesome/fontawesome-free": "^5.15.2",
+    "core-js": "^3.20.1",
+    "lightgallery": "^2.3.0"
+  },
+  "browserslist": [
+    "last 2 versions",
+    "> 1%",
+    "IE 10"
+  ]
 }
